--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
             }
 
             try {
-                const response = await fetch('bacnkendphising-production.up.railway.app/api/check-url', {
+                const response = await fetch('https://bacnkendphising-production.up.railway.app/api/check-url', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ url })
                 });
-                
+
                 if (!response.ok) {
                     console.error('Response error:', response.status);
                     resultEl.innerText = 'Terjadi kesalahan saat pengecekan.';
